<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/playerView"
    tools:context=".view.exoplayer.PlayerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Exoplayer -->
        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/exo_video_view"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_margin="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewCasting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cast_info"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/exo_video_view"
            app:layout_constraintEnd_toEndOf="@+id/exo_video_view"
            app:layout_constraintStart_toStartOf="@+id/exo_video_view"
            app:layout_constraintTop_toTopOf="@+id/exo_video_view"
            android:visibility="gone"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Moview details -->
    <TextView
        android:id="@+id/textViewPlayerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/movie_name"
        android:textStyle="bold"
        android:textSize="@dimen/textSizeBig"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constrPlayer" />

    <TextView
        android:id="@+id/textViewPlayerDescr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/movie_descr"
        android:textSize="@dimen/textSizeNormal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPlayerName" />

    <TextView
        android:id="@+id/textViewPlayerLicence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/movie_licence"
        android:textSize="@dimen/textSizeNormal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPlayerDescr" />

    <TextView
        android:id="@+id/textViewPlayerViews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/movie_views"
        android:textSize="@dimen/textSizeNormal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPlayerLicence" />


</androidx.constraintlayout.widget.ConstraintLayout>